--- a/public/assets/css/theme-rtl.css
+++ b/public/assets/css/theme-rtl.css
@@ -19548,6 +19548,11 @@ iframe {
   border-bottom-color: #DF6951;
 }
 
+.grid-sizer,
+.grid-item {
+  width: 30%;
+}
+
 /*-----------------------------------------------
 |   User Styles
 -----------------------------------------------*/
