--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -19571,6 +19571,11 @@ iframe {
   border-bottom-color: #DF6951;
 }
 
+.grid-sizer,
+.grid-item {
+  width: 30%;
+}
+
 /*-----------------------------------------------
 |   User Styles
 -----------------------------------------------*/
