--- a/src/pug/mixins/common/ItemCard.pug
+++ b/src/pug/mixins/common/ItemCard.pug
@@ -1,6 +1,6 @@
 mixin ItemCard(props)
 
-  .card.shadow-lg.p-3.mb-5.bg-white.rounded.grid-item(class=props.item)
+  .card.shadow-lg.p-3.mb-2.bg-white.rounded
     .card-body.text-center
       .card-title=props.title
       .card-text=props.category
