--- a/src/pug/layouts/LayoutTheme.pug
+++ b/src/pug/layouts/LayoutTheme.pug
@@ -6,6 +6,8 @@ include ../mixins/sectionTitle/SectionTitle
 prepend scripts
   script(src=`https://polyfill.io/v3/polyfill.min.js?features=window.scroll`)
   script(src=`${CWD}vendors/fontawesome/all.min.js`)
+  script(src=`${CWD}vendors/isotope-layout/isotope.pkgd.min.js`)
+  script(src=`${CWD}vendors/isotope-packery/packery-mode.pkgd.min.js`)
 
 
 append footerStyles
