--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -1,12 +1,29 @@
+append variables 
+  -
+    var background={
+      "className":"z-index--1 bottom-0 d-none d-lg-block ",
+      "image":`${CWD}assets/img/superhero/background.jpg`,
+      attrs:{
+        style:'opacity:.9; background-position: top !important ;,height:100%;width:100%'
+      }
+    }
+
+
+
+
+
 mixin HeroHeader
-  section.pt-0
-    .container
-      h1.pt-9.fs-14.fw-bold ThemeWagon
-      h2 HTML5 Template Collection 2022
-      h5.mt-3 One Hundred Pre-build website
-      a.btn.btn-primary.mt-3.mt-md-5
-        i.fas.fa-cloud-download-alt.me-3
-        |Download Free
+  +Section.py-5
+    .row
+      .col-md-6.align-self-center
+        h1.fs-lg-10.fs-md-10.fw-bold ThemeWagon
+        h2.fs-4 HTML5 Template Collection 2022
+        h5.mt-3 One Hundred Pre-build website
+        a.btn.btn-primary.mt-2.mt-lg-5
+          i.fas.fa-cloud-download-alt.me-3
+          |Download Free
+      .col-md-6.d-flex.align-items-center
+        img(src=`${CWD}assets/img/superhero/background.jpg`).img-fluid.d-sm-none.d-lg-block
 
 
 
