--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -1,38 +1,38 @@
 mixin NavbarShowcase
-  nav.navbar.navbar-expand-lg.navbar-light.sticky-top.pt-4(data-navbar-on-scroll)
+  nav.navbar.navbar-expand.navbar-light.sticky-top.pt-4(data-navbar-on-scroll)
     .container-fluid
       ul.navbar-nav.mx-auto
         li.nav-item
-          a.nav-link(href="#" data-filter="*" data-bs-nav) All
+          a.nav-link.text-nowrap(href="#" data-filter="*" data-bs-nav) All
         li.nav-item
-          a.nav-link(href="#" data-filter=".admin" data-bs-nav) Admin & Dashboard
+          a.nav-link.text-nowrap(href="#" data-filter=".admin" data-bs-nav) Admin & Dashboard
         li.nav-item
-          a.nav-link(href="#" data-filter=".business" data-bs-nav) Business & Corporate
+          a.nav-link.text-nowrap(href="#" data-filter=".business" data-bs-nav) Business & Corporate
         li.nav-item
-          a.nav-link(href="#" data-filter=".landing" data-bs-nav) Landing Pages
+          a.nav-link.text-nowrap(href="#" data-filter=".landing" data-bs-nav) Landing Pages
         li.nav-item
-          a.nav-link(href="#" data-filter=".ecommerce" data-bs-nav) E-commerce
+          a.nav-link.text-nowrap(href="#" data-filter=".ecommerce" data-bs-nav) E-commerce
         li.nav-item
-          a.nav-link(href="#" data-filter=".food" data-bs-nav) Food & Restaurant
+          a.nav-link.text-nowrap(href="#" data-filter=".food" data-bs-nav) Food & Restaurant
         li.nav-item
-          a.nav-link(href="#" data-filter=".medical" data-bs-nav) Medical & Health Care
+          a.nav-link.text-nowrap(href="#" data-filter=".medical" data-bs-nav) Medical & Health Care
         li.nav-item
-          a.nav-link(href="#" data-filter=".travel" data-bs-nav) Travel & Booking
+          a.nav-link.text-nowrap(href="#" data-filter=".travel" data-bs-nav) Travel & Booking
         li.nav-item
-          a.nav-link(href="#" data-filter=".photography") Multipurpose
+          a.nav-link.text-nowrap(href="#" data-filter=".photography") Multipurpose
         li.nav-item
-          a.nav-link(href="#" data-filter=".coming") Personal
-        li.nav-item
-          a.nav-link(href="#" data-filter=".other") PortFolio
-        li.nav-item
-          a.nav-link(href="#" data-filter=".photography") Photography
-        li.nav-item
-          a.nav-link(href="#" data-filter=".coming") Coming Soon
-        li.nav-item
-          a.nav-link(href="#" data-filter=".other") Other
+        //-   a.nav-link.text-nowrap(href="#" data-filter=".coming") Personal
+        //- li.nav-item
+        //-   a.nav-link.text-nowrap(href="#" data-filter=".other") PortFolio
+        //- li.nav-item
+        //-   a.nav-link.text-nowrap(href="#" data-filter=".photography") Photography
+        //- li.nav-item
+        //-   a.nav-link.text-nowrap(href="#" data-filter=".coming") Coming Soon
+        //- li.nav-item
+        //-   a.nav-link.text-nowrap(href="#" data-filter=".other") Other
         li.nav-item.dropdown
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
-          .dropdown-menu#category-list(aria-labelledby="navbarDropdown")
+          ul.dropdown-menu.category-list(aria-labelledby="navbarDropdown")
 
 
 
@@ -67,7 +67,6 @@ mixin NavbarShowcase
         //-   a.nav-link Business & Corporate
         //- li.nav-item
         //-   a.nav-link Landing Pages
-
 
 
 
