--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -19571,8 +19571,26 @@ iframe {
   border-bottom-color: #DF6951;
 }
 
-.grid-item {
-  width: 30%;
+.nav-link {
+  white-space: nowrap;
+}
+
+.content .grid {
+  margin-right: -6px;
+  margin-left: -6px;
+}
+
+.grid .item {
+  width: 33.33%;
+  display: block;
+  padding: 0 16px;
+  margin-bottom: 30px;
+  float: left;
+  text-decoration: none;
+}
+
+.grid .item:hover {
+  text-decoration: none;
 }
 
 /*-----------------------------------------------
