--- a/src/scss/theme/_isotope.scss
+++ b/src/scss/theme/_isotope.scss
@@ -1,4 +1,16 @@
 
-.grid-item { 
-  width: 30%;
+.content .grid{
+	margin-right: -6px;
+	margin-left: -6px;
+}
+.grid .item{
+	width: 33.33%;
+	display: block;
+	padding: 0 16px;
+	margin-bottom: 30px;
+	float: left;
+  text-decoration: none;
+}
+.grid .item:hover{
+	text-decoration: none;
 }
