--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,9 +2,7 @@ extends layouts/LayoutTheme
 include mixins/common/PreFooter
 include mixins/common/Footer
 include mixins/common/ItemCard
-
 include mixins/home/landing/HeroHeader
-
 include mixins/home/landing/Item
 
 
@@ -17,3 +15,4 @@ append content
   +HeroHeader
   +NavbarShowcase
   +Item
+  +Footer
