--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -19,17 +19,17 @@ mixin NavbarShowcase
         li.nav-item
           a.nav-link(href="#" data-filter=".travel" data-bs-nav) Travel & Booking
         li.nav-item
-          a.nav-link(href="#" data-filter=".multipurpose") Multipurpose
+          a.nav-link(href="#" data-filter=".multipurpose" data-bs-nav) Multipurpose
         li.nav-item
-          a.nav-link(href="#" data-filter=".personal") Personal
+          a.nav-link(href="#" data-filter=".personal" data-bs-nav) Personal
         li.nav-item
-          a.nav-link(href="#" data-filter=".portfolio") PortFolio
+          a.nav-link(href="#" data-filter=".portfolio" data-bs-nav) PortFolio
         li.nav-item
-          a.nav-link(href="#" data-filter=".photography") Photography
+          a.nav-link(href="#" data-filter=".photography" data-bs-nav) Photography
         li.nav-item
-          a.nav-link(href="#" data-filter=".coming") Coming Soon
+          a.nav-link(href="#" data-filter=".coming" data-bs-nav) Coming Soon
         li.nav-item
-          a.nav-link(href="#" data-filter=".other") Other
+          a.nav-link(href="#" data-filter=".other" data-bs-nav) Other
         li.nav-item.dropdown
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
           .dropdown-menu.category-list(aria-labelledby="navbarDropdown")
