--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -13,6 +13,11 @@ append variables
 
 mixin HeroHeader
   +Section(background).py-10
+    .shape
+      span
+      span
+      span
+      span
     .container.text-center
       h1.text-white.fs-lg-13.fs-md-10.fw-bold ThemeWagon
       h4.text-white HTML5 Template Collection 2022
