--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -1,36 +1,37 @@
 mixin NavbarShowcase
-  .container-fluid.content.clearfix.bg-light.rounded.my-4
-    nav.navbar.navbar-expand.navbar-light.sticky-top.mx-auto
-      ul.navbar-nav
-        li.nav-item
-          a.nav-link(href="#" data-filter="*" data-bs-nav) All
-        li.nav-item
-          a.nav-link(href="#" data-filter=".admin" data-bs-nav) Admin & Dashboard
-        li.nav-item
-          a.nav-link(href="#" data-filter=".business" data-bs-nav) Business & Corporate
-        li.nav-item
-          a.nav-link(href="#" data-filter=".landing" data-bs-nav) Landing Pages
-        li.nav-item
-          a.nav-link(href="#" data-filter=".ecommerce" data-bs-nav) E-commerce
-        li.nav-item
-          a.nav-link(href="#" data-filter=".food" data-bs-nav) Food & Restaurant
-        li.nav-item
-          a.nav-link(href="#" data-filter=".medical" data-bs-nav) Medical & Health Care
-        li.nav-item
-          a.nav-link(href="#" data-filter=".travel" data-bs-nav) Travel & Booking
-        li.nav-item
-          a.nav-link(href="#" data-filter=".multipurpose" data-bs-nav) Multipurpose
-        li.nav-item
-          a.nav-link(href="#" data-filter=".personal" data-bs-nav) Personal
-        li.nav-item
-          a.nav-link(href="#" data-filter=".portfolio" data-bs-nav) PortFolio
-        li.nav-item
-          a.nav-link(href="#" data-filter=".photography" data-bs-nav) Photography
-        li.nav-item
-          a.nav-link(href="#" data-filter=".coming" data-bs-nav) Coming Soon
-        li.nav-item
-          a.nav-link(href="#" data-filter=".other" data-bs-nav) Other
-        li.nav-item.dropdown
-          a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
-          .dropdown-menu.category-list(aria-labelledby="navbarDropdown")
+  nav.navbar.navbar-expand.navbar-light.sticky-top.bg-light.m-4.p-2.rounded.mx-7
+    ul.navbar-nav
+      li.nav-item
+        a.nav-link(href="#" data-filter="*" data-bs-nav) All
+      li.nav-item
+        a.nav-link(href="#" data-filter=".admin" data-bs-nav) Admin & Dashboard
+      li.nav-item
+        a.nav-link(href="#" data-filter=".business" data-bs-nav) Business & Corporate
+      li.nav-item
+        a.nav-link(href="#" data-filter=".landing" data-bs-nav) Landing Pages
+      li.nav-item
+        a.nav-link(href="#" data-filter=".ecommerce" data-bs-nav) E-commerce
+      li.nav-item
+        a.nav-link(href="#" data-filter=".food" data-bs-nav) Food & Restaurant
+      li.nav-item
+        a.nav-link(href="#" data-filter=".medical" data-bs-nav) Medical & Health Care
+      li.nav-item
+        a.nav-link(href="#" data-filter=".travel" data-bs-nav) Travel & Booking
+      li.nav-item
+        a.nav-link(href="#" data-filter=".multipurpose" data-bs-nav) Multipurpose
+      li.nav-item
+        a.nav-link(href="#" data-filter=".personal" data-bs-nav) Personal
+      li.nav-item
+        a.nav-link(href="#" data-filter=".portfolio" data-bs-nav) PortFolio
+      li.nav-item
+        a.nav-link(href="#" data-filter=".photography" data-bs-nav) Photography
+      li.nav-item
+        a.nav-link(href="#" data-filter=".coming" data-bs-nav) Coming Soon
+      li.nav-item
+        a.nav-link(href="#" data-filter=".other" data-bs-nav) Other
+      li.nav-item.dropdown
+        a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
+        .dropdown-menu.category-list(aria-labelledby="navbarDropdown")
+  a.back-to-top.bg-primary(href="#")
+    i.fas.fa-angle-double-up 
 
