--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,8 @@ prepend scripts
 append content
 
   +HeroHeader
-  +NavbarShowcase
-  +Item
+  +Section.py-0
+    +NavbarShowcase
+    +Item
   +PreFooter
   +Footer
