--- a/src/pug/mixins/Variables.pug
+++ b/src/pug/mixins/Variables.pug
@@ -12,13 +12,14 @@ append variables
   - 
     var data = [
       {
-      title: 'Corona',
-      link: 'https://technext.github.io/corona-free-dark-bootstrap-admin-template/index.html',
-      preview: 'https://technext.github.io/corona-free-dark-bootstrap-admin-template/index.html',
-      img: 'img01.png',
-      item: 'admin',
-      category: 'Admin & DashBoard'
+        title: 'Dtox',
+        link: 'https://themewagon.com/themes/dtox-free-bootstrap-4-html5-landing-page-template/',
+        preview: 'https://technext.github.io/dtox/index.html#team',
+        img: 'img11.png',
+        item: 'landing',
+        category: 'landing Page'
       },
+
       {
         title: 'Makan',
         link: 'https://technext.github.io/corona-free-dark-bootstrap-admin-template/index.html',
@@ -91,14 +92,7 @@ append variables
         item: 'multipurpose ',
         category: 'Multipurpose '
       },
-      {
-        title: 'Dtox',
-        link: 'https://themewagon.com/themes/dtox-free-bootstrap-4-html5-landing-page-template/',
-        preview: 'https://technext.github.io/dtox/index.html#team',
-        img: 'img11.png',
-        item: 'landing',
-        category: 'landing Pages'
-      },
+
       {
         title: 'Elaadmin',
         link: 'https://themewagon.com/themes/free-responsive-bootstrap-4-html5-admin-dashboard-template-elaadmin/',
@@ -113,7 +107,7 @@ append variables
         preview: 'https://technext.github.io/seogram/html/index.html',
         img: 'img13.png',
         item: 'landing',
-        category: 'Landing'
+        category: 'Landing Page'
       },
       {
         title: 'JohnDoe',
@@ -385,7 +379,7 @@ append variables
         preview: 'https://technext.github.io/notes-html-template/',
         img: 'img46.png',
         item: 'landing',
-        category: 'Landing Pages'
+        category: 'Landing Page'
       },
 
       {
@@ -649,7 +643,15 @@ append variables
         preview: 'https://technext.github.io/karma/index.html',
         img: 'img78.png',
         item: 'landing',
-        category: 'Landing'
+        category: 'Landing Page'
+      },
+      {
+      title: 'Corona',
+      link: 'https://technext.github.io/corona-free-dark-bootstrap-admin-template/index.html',
+      preview: 'https://technext.github.io/corona-free-dark-bootstrap-admin-template/index.html',
+      img: 'img01.png',
+      item: 'admin',
+      category: 'Admin & DashBoard'
       },
       {
         title: 'Purple Buzz',
