--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ prepend scripts
 append content
 
   +HeroHeader
-  +Section.py-0
+  +Section("container-fluid").py-0
     +NavbarShowcase
     +Item
   +PreFooter
