--- a/src/pug/mixins/common/ItemCard.pug
+++ b/src/pug/mixins/common/ItemCard.pug
@@ -1,6 +1,6 @@
 mixin ItemCard(props)
 
-  .card.shadow-lg.mb-2.bg-white
+  .card.mb-2.bg-white.card-showcase
     .card-body.text-center
       h4.card-title.fw-bold.text-primary.mb-0=props.title
       .card-text.text-dark=props.category  
