--- a/src/pug/mixins/common/Footer.pug
+++ b/src/pug/mixins/common/Footer.pug
@@ -1,10 +1,5 @@
-mixin Footer
-  +Section.text-center.py-0
-    .container.border-top.py-3
-      p.mb-0
-        |Made with
-        span.fas.fa-heart.mx-1.text-danger 
-        |by 
-        a(href="https://themewagon.com/" target="_blank" ).text-decoration-none.ms-1 ThemeWagon
+//- mixin Footer
+//-   +Section("container-fluid").py-0
+//-     img(src=`${CWD}assets/img/footer/footerframe.png`  alt="Feature")
 
 
