--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -1,37 +1,37 @@
 mixin NavbarShowcase
-  nav.navbar.navbar-expand.navbar-light.bg-light.rounded.my-2
+  nav.navbar.navbar-expand.navbar-light.rounded.my-2.border
     ul.navbar-nav
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter="*" data-bs-nav) All
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter="*" data-bs-nav) All
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".admin" data-bs-nav) Admin & Dashboard
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".admin" data-bs-nav) Admin & Dashboard
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".business" data-bs-nav) Business & Corporate
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".business" data-bs-nav) Business & Corporate
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".landing" data-bs-nav) Landing Pages
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".landing" data-bs-nav) Landing Pages
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".ecommerce" data-bs-nav) E-commerce
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".ecommerce" data-bs-nav) E-commerce
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".food" data-bs-nav) Food & Restaurant
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".food" data-bs-nav) Food & Restaurant
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".medical" data-bs-nav) Medical & Health Care
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".medical" data-bs-nav) Medical & Health Care
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".travel" data-bs-nav) Travel & Booking
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".travel" data-bs-nav) Travel & Booking
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".multipurpose" data-bs-nav) Multipurpose
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".multipurpose" data-bs-nav) Multipurpose
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".personal" data-bs-nav) Personal
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".personal" data-bs-nav) Personal
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".portfolio" data-bs-nav) PortFolio
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".portfolio" data-bs-nav) PortFolio
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".photography" data-bs-nav) Photography
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".photography" data-bs-nav) Photography
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".game" data-bs-nav) Game & Anime
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".game" data-bs-nav) Game & Anime
       li.nav-item
-        a.nav-link(href="javascript: void(0)" data-filter=".other" data-bs-nav) Other
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".other" data-bs-nav) Other
       li.nav-item.dropdown
-        a.nav-link.dropdown-toggle(href="javascript: void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
+        a.nav-link.dropdown-toggle.fw-medium(href="javascript: void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
         .dropdown-menu.category-list(aria-labelledby="navbarDropdown")
-  a.back-to-top.bg-primary(href="#")
+  a.back-to-top.bg-info(href="#")
     i.fas.fa-angle-double-up 
 
