--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,6 +3,7 @@ include mixins/common/PreFooter
 include mixins/common/Footer
 include mixins/common/ItemCard
 include mixins/home/landing/HeroHeader
+include mixins/home/landing/Frame
 include mixins/home/landing/Item
 
 
@@ -13,8 +14,9 @@ prepend scripts
 append content
 
   +HeroHeader
+  //- +Frame
   +Section("container-fluid").py-0
     +NavbarShowcase
     +Item
   +PreFooter
-  +Footer
+  //- +Footer
