--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -1,48 +1,58 @@
-//- mixin FooterList(...items)
-//-   each item in items
-//-     li.mb-1
-//-       a.link-900.text-secondary.text-decoration-none(href='#!')= item
+append variables 
+  -
+    var gradient={
+      "className":" bottom-0",
 
+      attrs:{
+        style:'background-image:linear-gradient(90deg, #0d2974 -11.17%, #3498db 110.39%);' 
+      }
+    }
+    var footerbackground={
+      "className":" bottom-0",
+        "image":`${CWD}assets/img/footer/footer.png`,
 
-
-
-
-mixin PreFooter 
-  +Section.py-7
-    .row.d-flex.align-items-center
-      .col-md-8 
-        h2.text-primary.mb-2.fs-8 Ready to get started 
-        h3 Get the entire collection in your inbox 
-      .col-md-4.text-md-right
-        a.text-white.btn.btn-success
-          i.fas.fa-cloud-download-alt.me-3
-          |Download Free
-
-
-
-
-
+    }
+    var footerframe={
+      "className":" ",
+        "image":`${CWD}assets/img/footer/frame.png`,
+        //- "gradient":"linear-gradient(90deg, #0d2974 -11.17%, #3498db 110.39%);" 
+        attrs:{
+          style:'background-size: auto;background-position: top;' 
+        }
+    }
 
 
 
 
 
 
+mixin PreFooter
+  +Section(gradient,"container-fluid").py-0
+    +Background(footerbackground)
+    .container.text-center.pt-10.z-index-1
+      h1.mb-4.fw-bold.text-white.fs-10 Ready to get started?
+      p.text-white.fw-medium 
+        |HTML5 Template Collection 2022
+        br
+        |One Hundred Pre-build website
+
+      a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
+        i.fas.fa-download.me-3
+        |Download Free
+      p.mb-0.text-white.mt-6.fs--1
+        |Brought to you with
+        span.text-success.fas.fa-heart.mx-1
+        |from
+        a(href="https://themewagon.com/" target="_blank" ).text-decoration-none.ms-1.text-white ThemeWagon
+    +Background(footerframe)
 
 
-      //- ul.list-unstyled.mb-0
-      //-   +FooterList('Airlinefees', 'Airline', 'Low fare tips')
 
-      //- .icon-group.mb-4 
-      //-   a.text-decoration-none.icon-item.shadow-social#facebook(href="#!")
-      //-     i.fab.fa-facebook-f 
-      //-   a.text-decoration-none.icon-item.shadow-social#instagram(href="#!")
-      //-     i.fab.fa-instagram 
-      //-   a.text-decoration-none.icon-item.shadow-social#twitter(href="#!")
-      //-     i.fab.fa-twitter 
-      //- h4.fw-medium.font-sans-serif.text-secondary.mb-3 Discover our app
-      //- .d-flex.align-items-center  
-      //-   a(href="#!") 
-      //-     img.me-2(src=`${CWD}assets/img/play-store.png`, alt="play store")
-      //-   a(href="#!") 
-      //-     img(src=`${CWD}assets/img/apple-store.png`, alt="apple store")
+
+
+
+
+
+
+
+
