--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -22,7 +22,7 @@ mixin NavbarShowcase
       li.nav-item
         a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".personal" data-bs-nav) Personal
       li.nav-item
-        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".portfolio" data-bs-nav) PortFolio
+        a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".portfolio" data-bs-nav) Portfolio
       li.nav-item
         a.nav-link.fw-medium(href="javascript: void(0)" data-filter=".photography" data-bs-nav) Photography
       li.nav-item
