--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -14,7 +14,7 @@ append variables
     }
     var frame={
       "className":"bottom-0 ",
-        "image":`${CWD}assets/img/hero/frame.png`,
+        "image":`${CWD}assets/img/hero/frame.svg`,
 
         attrs:{
           style:'background-size: auto;background-position: bottom;' 
