--- a/src/scss/theme/_isotope.scss
+++ b/src/scss/theme/_isotope.scss
@@ -10,6 +10,6 @@
 .grid .item:hover{
 	text-decoration: none;
 }
-[data-isotope] {
-	visibility: hidden;
-}
+// [data-isotope] {
+// 	visibility: hidden;
+// }
