--- a/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -1,5 +1,5 @@
 mixin NavbarShowcase
-  nav.navbar.navbar-expand.navbar-light.rounded.border
+  nav.navbar.navbar-expand.navbar-light.rounded.border.mt-3
     ul.navbar-nav
       li.nav-item
         a.nav-link.active.fw-medium(href="javascript: void(0)" data-filter="*" data-bs-nav) All
