--- a/src/scss/theme/_heroHeader.scss
+++ b/src/scss/theme/_heroHeader.scss
@@ -50,3 +50,13 @@
     margin-left: -(map-get($spacers, 7));
   }
 }
+
+
+// .wave{
+//   bottom: -2px;
+// }
+
+// .pos-absolute{
+//   position: absolute;
+// }
+
