--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ prepend scripts
 append content
 
   +HeroHeader
-  +Section("container-fluid").py-0.clearfix
+  +Section("container-fluid").py-0
     +NavbarShowcase
     +Item
   +PreFooter
