--- a/src/pug/mixins/common/ItemCard.pug
+++ b/src/pug/mixins/common/ItemCard.pug
@@ -4,5 +4,5 @@ mixin ItemCard(props)
     .card-body.text-center
       h4.card-title.fw-bold.text-primary.mb-0=props.title
       .card-text.text-dark=props.category  
-    img.card-img-bottom(src=`${CWD}assets/img/template/${props.img}`  alt="Feature" loading="lazy")
+    img.card-img-bottom(src=`${CWD}assets/img/template/${props.img}`  alt="Feature")
 
