--- a/src/pug/mixins/home/landing/Item.pug
+++ b/src/pug/mixins/home/landing/Item.pug
@@ -2,7 +2,7 @@ append variables
 mixin Item 
   .row.mt-4.grid
     each val in data
-      .col-lg-4.col-md-6.item.mb-3(class=`item ${
+      .col-lg-4.col-md-6.mb-3(class=`item ${
       val.item
         }`)
           a(href=`${val.preview}`  data-category=`${val.item}`).text-decoration-none
